src/Services/mainsparshServices/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: srfsparsh
  labels:
    app.kubernetes.io/part-of: srfsparsh
